--- a/app/src/main/res/values/language.xml
+++ b/app/src/main/res/values/language.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="language_array">
+        <item></item>
         <item>English</item>
         <item>Deutsch</item>
         <item>Nederlands</item>
